@@ -155,7 +155,7 @@ namespace MeGUI
                 input.Filter = "All supported files|*.avs;*.ifo;*.mkv;*.avi;*.mp4;*.flv;*.wmv;*.ogm;*.264;*.h264;*.avc;*.m2t*;*.m2ts;*.mts;*.tp;*.ts;*.trp;*.vob;*.ifo;*.mpg;*.mpeg;*.m1v;*.m2v;*.mpv;*.pva;*.vro;*.vc1;*.mpls|All DGAVCIndex supported files|*.264;*.h264;*.avc;*.m2t*;*.m2ts;*.mts;*.tp;*.ts;*.trp|All DGIndex supported files|*.vob;*.mpg;*.mpeg;*.m1v;*.m2v;*.mpv;*.tp;*.ts;*.trp;*.m2t;*.m2ts;*.pva;*.vro|All DGIndexNV supported files|*.264;*.h264;*.avc;*.m2v;*.mpv;*.vc1;*.mkv;*.vob;*.mpg;*.mpeg;*.m2t;*.m2ts;*.mts;*.tp;*.ts;*.trp|All FFMS Indexer supported files|*.mkv;*.avi;*.mp4;*.flv;*.wmv;*.ogm;*.vob;*.mpg;*.m2ts;*.ts|AviSynth Scripts|*.avs|IFO DVD files|*.ifo|Blu-Ray Playlist|*.mpls|All files|*.*";
             else
                 input.Filter = "All supported files|*.avs;*.ifo;*.mkv;*.avi;*.mp4;*.flv;*.wmv;*.ogm;*.264;*.h264;*.avc;*.m2t*;*.m2ts;*.mts;*.tp;*.ts;*.trp;*.vob;*.ifo;*.mpg;*.mpeg;*.m1v;*.m2v;*.mpv;*.pva;*.vro;*.mpls|All DGAVCIndex supported files|*.264;*.h264;*.avc;*.m2t*;*.m2ts;*.mts;*.tp;*.ts;*.trp|All DGIndex supported files|*.vob;*.mpg;*.mpeg;*.m1v;*.m2v;*.mpv;*.tp;*.ts;*.trp;*.m2t;*.m2ts;*.pva;*.vro|All FFMS Indexer supported files|*.mkv;*.avi;*.mp4;*.flv;*.wmv;*.ogm;*.vob;*.mpg;*.m2ts;*.ts|AviSynth Scripts|*.avs|IFO DVD files|*.ifo|Blu-Ray Playlist|*.mpls|All files|*.*";
-            DragDropUtil.RegisterSingleFileDragDrop(input, setInput, delegate() { return input.Filter + "|All folders|*."; });
+            DragDropUtil.RegisterMultiFileDragDrop(input, setInput, delegate() { return input.Filter + "|All folders|*."; });
             DragDropUtil.RegisterSingleFileDragDrop(output, setOutput);
             DragDropUtil.RegisterSingleFileDragDrop(chapterFile, null, delegate() { return chapterFile.Filter; });
             DragDropUtil.RegisterSingleFileDragDrop(workingDirectory, setWorkingDirectory);
@@ -337,6 +337,29 @@ namespace MeGUI
             input.AddCustomItem(strFileorFolderName);
             input.SelectedObject = strFileorFolderName;
         }
+
+        public void setInput(string[] strFileorFolderName)
+        {
+            List<OneClickFilesToProcess> arrFilesToProcess = new List<OneClickFilesToProcess>();
+            foreach (string strFile in strFileorFolderName)
+                if (File.Exists(strFile))
+                    arrFilesToProcess.Add(new OneClickFilesToProcess(strFile, 1));
+            if (arrFilesToProcess.Count == 0)
+            {
+                MessageBox.Show("These files or folders cannot be used in OneClick mode.", "Error", MessageBoxButtons.OK, MessageBoxIcon.Error);
+                return;
+            }
+            
+            if (_oLog == null)
+            {
+                _oLog = mainForm.Log.Info("OneClick");
+                mainForm.OneClickLog = _oLog;
+            }
+
+            this.Cursor = System.Windows.Forms.Cursors.WaitCursor;
+            goButton.Enabled = false;
+            OneClickProcessing oProcessor = new OneClickProcessing(this, arrFilesToProcess, _oSettings, _oLog);
+        }
         
         private void openInput(string fileName)
         {
@@ -383,7 +406,7 @@ namespace MeGUI
 
             if (!bAutomatedProcessing && arrFilesToProcess.Count > 0)
             {
-                string question = "Do you want to process all " + (arrFilesToProcess.Count + 1) + " files in the folder?\r\nAll files will be processed with the current settings\r\nin the OneClick profile \"" + oneclickProfile.SelectedProfile.Name + "\".";
+                string question = "Do you want to process all " + (arrFilesToProcess.Count + 1) + " files/tracks in the selection?\r\nThey all will be processed with the current settings\r\nin the OneClick profile \"" + oneclickProfile.SelectedProfile.Name + "\".";
                 DialogResult dr = MessageBox.Show(question, "Automated folder processing", MessageBoxButtons.YesNo, MessageBoxIcon.Question);
                 if (dr == System.Windows.Forms.DialogResult.Yes)
                 {
@@ -391,13 +414,13 @@ namespace MeGUI
                     this.Settings = (OneClickSettings)oneclickProfile.SelectedProfile.BaseSettings;
                 }
             }
+            bLock = true;
             if (input.SelectedSCItem == null || !iFile.FileName.Equals((string)input.SelectedObject))
             {
-                bLock = true;
                 input.StandardItems = new object[] { iFile.FileName };
-                input.SelectedIndex = 0;
-                bLock = false;
+                input.SelectedIndex = 0; 
             }
+            bLock = false;
 
             _videoInputInfo = iFile;
 
@@ -1099,7 +1122,7 @@ namespace MeGUI
 
         private void subtitleAddTrack_Click(object sender, EventArgs e)
         {
-            SubtitleAddTrack();
+            SubtitleAddTrack(true);
         }
 
         private void subtitleRemoveTrack_Click(object sender, EventArgs e)
@@ -1107,7 +1130,7 @@ namespace MeGUI
             SubtitleRemoveTrack(iSelectedSubtitleTabPage);
         }
 
-        private void SubtitleAddTrack()
+        private void SubtitleAddTrack(bool bChangeFocus)
         {
             TabPage p = new TabPage("Subtitle " + (subtitleTracks.Count + 1));
             p.UseVisualStyleBackColor = subtitlesTab.TabPages[0].UseVisualStyleBackColor;
@@ -1133,7 +1156,8 @@ namespace MeGUI
             p.Controls.Add(a);
             subtitleTracks.Add(a);
 
-            subtitlesTab.SelectedTab = p;
+            if (bChangeFocus)
+                subtitlesTab.SelectedTab = p;
         }
 
         private void SubtitleRemoveTrack(int iTabPageIndex)
@@ -1142,7 +1166,7 @@ namespace MeGUI
                 return;
 
             if (iTabPageIndex == 0 && subtitlesTab.TabCount == 1)
-                SubtitleAddTrack();
+                SubtitleAddTrack(true);
 
             subtitlesTab.TabPages.RemoveAt(iTabPageIndex);
             subtitleTracks.RemoveAt(iTabPageIndex);
@@ -1247,7 +1271,7 @@ namespace MeGUI
                     if (arrSubtitleTrackInfo[i].Language.ToLower(System.Globalization.CultureInfo.InvariantCulture).Equals(strLanguage.ToLower(System.Globalization.CultureInfo.InvariantCulture)))
                     {
                         if (iCounter > 0)
-                            SubtitleAddTrack();
+                            SubtitleAddTrack(false);
                         subtitleTracks[iCounter++].SelectedStreamIndex = i + 1;
                     }
                 }
@@ -1258,7 +1282,7 @@ namespace MeGUI
                 for (int i = 0; i < arrSubtitleTrackInfo.Count; i++)
                 {
                     if (iCounter > 0)
-                        SubtitleAddTrack();
+                        SubtitleAddTrack(false);
                     subtitleTracks[iCounter++].SelectedStreamIndex = i + 1;
                 }
             }
@@ -1266,7 +1290,7 @@ namespace MeGUI
 
         private void subtitlesTab_MouseDoubleClick(object sender, MouseEventArgs e)
         {
-            SubtitleAddTrack();
+            SubtitleAddTrack(true);
         }
 
 
@@ -1278,7 +1302,7 @@ namespace MeGUI
 
         private void audioAddTrack_Click(object sender, EventArgs e)
         {
-           AudioAddTrack();
+           AudioAddTrack(true);
         }
 
         private void audioRemoveTrack_Click(object sender, EventArgs e)
@@ -1286,7 +1310,7 @@ namespace MeGUI
             AudioRemoveTrack(iSelectedAudioTabPage);
         }
 
-        private void AudioAddTrack()
+        private void AudioAddTrack(bool bChangeFocus)
         {
             TabPage p = new TabPage("Audio " + (audioTracks.Count + 1));
             p.UseVisualStyleBackColor = audioTab.TabPages[0].UseVisualStyleBackColor;
@@ -1314,7 +1338,8 @@ namespace MeGUI
             p.Controls.Add(a);
             audioTracks.Add(a);
 
-            audioTab.SelectedTab = p;
+            if (bChangeFocus)
+                audioTab.SelectedTab = p;
         }
 
         private void AudioRemoveTrack(int iTabPageIndex)
@@ -1323,7 +1348,7 @@ namespace MeGUI
                 return;
 
             if (iTabPageIndex == 0 && subtitlesTab.TabCount == 1)
-                AudioAddTrack();
+                AudioAddTrack(true);
 
             audioTab.TabPages.RemoveAt(iTabPageIndex);
             audioTracks.RemoveAt(iTabPageIndex);
@@ -1425,7 +1450,7 @@ namespace MeGUI
                     if (arrAudioTrackInfo[i].Language.ToLower(System.Globalization.CultureInfo.InvariantCulture).Equals(strLanguage.ToLower(System.Globalization.CultureInfo.InvariantCulture)))
                     {
                         if (iCounter > 0)
-                            AudioAddTrack();
+                            AudioAddTrack(false);
                         audioTracks[iCounter++].SelectedStreamIndex = i + 1;
                     }
                 }
@@ -1436,7 +1461,7 @@ namespace MeGUI
                 for (int i = 0; i < arrAudioTrackInfo.Count; i++)
                 {
                     if (iCounter > 0)
-                        AudioAddTrack();
+                        AudioAddTrack(false);
                     audioTracks[iCounter++].SelectedStreamIndex = i + 1;
                 }
             }
@@ -1471,7 +1496,7 @@ namespace MeGUI
 
         private void audioTab_MouseDoubleClick(object sender, MouseEventArgs e)
         {
-            AudioAddTrack();
+            AudioAddTrack(true);
         }
 
         private void OneClickWindow_Shown(object sender, EventArgs e)
@@ -1483,7 +1508,7 @@ namespace MeGUI
         private void audioTab_SelectedIndexChanged(object sender, EventArgs e)
         {
             if (audioTab.SelectedTab.Text.Equals("   +"))
-                AudioAddTrack();
+                AudioAddTrack(true);
         }
 
         private void audioTab_KeyUp(object sender, KeyEventArgs e)
@@ -1495,7 +1520,7 @@ namespace MeGUI
         private void subtitlesTab_SelectedIndexChanged(object sender, EventArgs e)
         {
             if (subtitlesTab.SelectedTab.Text.Equals("   +"))
-                SubtitleAddTrack();
+                SubtitleAddTrack(true);
         }
 
         private void subtitlesTab_KeyUp(object sender, KeyEventArgs e)
