@@ -1,3 +1,4 @@
+2172 [OneClick] support multiple input files per drag & drop
 2171 [OneClick] cosmetics #2
 2170 [OneClick] cosmetics
 2169 [FFMPEG] some adjustments for newer builds
